First wave of balancing, smaller than I thought since lots of unfinished/undecided stuff

--- a/Localization/pt-BR.lang
+++ b/Localization/pt-BR.lang
@@ -1,1 +1,7 @@
 ItemName.TridentOfTheDepths=Tridente das Profundezas
+ItemName.LythenStaff=Cajado de Lythen
+ItemName.LythenSword=Espada de Lythen
+ItemName.LythenHandgun=Arma de Lythen
+ItemName.DalantiniumSteelbat=Bastão de Dalantinium
+ItemName.DalantiniumKnives=Facas de Dalantinium
+ItemName.TridentOfTheDepths=Tridente das Profundezas
