--- a/Localization/pt-BR.lang
+++ b/Localization/pt-BR.lang
@@ -5,3 +5,14 @@ ItemName.LythenHandgun=Arma de Lythen
 ItemName.DalantiniumSteelbat=Bastão de Dalantinium
 ItemName.DalantiniumKnives=Facas de Dalantinium
 ItemName.TridentOfTheDepths=Tridente das Profundezas
+ItemName.CoralEarring=Brinco de Coral
+ItemName.HydrodynamicalDivingGear=Equipamento de Mergulho Hidrodinâmico
+ItemName.LargeQuartzGem=Quartzo Grande
+ItemName.MirrorShield=Espelho-Escudo
+ItemName.QuartzCirclet=Bracelete de Quartzo
+ItemName.SOD=Escudo das Profundezas
+ItemName.SOS=Escudo das Costas
+ItemName.VolcanoInABottle=Vulcão em uma Garrafa
+ItemName.WaterDragonsScale=Escama do Dragão Aquático
+
+If you're reading this, return to monke -Exitium
