Arm,or locaziotns

--- a/Localization/pt-BR.lang
+++ b/Localization/pt-BR.lang
@@ -2,8 +2,8 @@ ItemName.TridentOfTheDepths=Tridente das Profundezas
 ItemName.LythenStaff=Cajado de Lythen
 ItemName.LythenSword=Espada de Lythen
 ItemName.LythenHandgun=Arma de Lythen
-ItemName.DalantiniumSteelbat=Bastão de Dalantinium
-ItemName.DalantiniumKnives=Facas de Dalantinium
+ItemName.DalantiniumSteelbat=Bastão de Dalantínio
+ItemName.DalantiniumKnives=Facas de Dalantínio
 ItemName.TridentOfTheDepths=Tridente das Profundezas
 ItemName.CoralEarring=Brinco de Coral
 ItemName.HydrodynamicalDivingGear=Equipamento de Mergulho Hidrodinâmico
@@ -14,5 +14,37 @@ ItemName.SOD=Escudo das Profundezas
 ItemName.SOS=Escudo das Costas
 ItemName.VolcanoInABottle=Vulcão em uma Garrafa
 ItemName.WaterDragonsScale=Escama do Dragão Aquático
+ItemName.AkumoMask=Máscara de Akumo
+ItemName.CoralGolemMask=Máscara do Golem de Coral
+ItemName.HydrosMask=Máscara do Hydros
+ItemName.KrakenMask=Máscara do Kraken
+ItemName.OmenMask=Máscara do Presságio do Marinheiro
+ItemName.TalosMask=Máscara do Talos
+ItemName.DalantiniumGreathelm=Grande-elmo de Dalantínio
+ItemName.DalantiniumGreaves=Botas de Dalantínio
+ItemName.DalantiniumHood=Capuz de Dalantínio
+ItemName.DalantiniumHornetGreathelm-Grande-elmo com Chifres de Dalantínio
+ItemName.DalantiniumMask=Máscara de Dalantínio
+ItemName.DalantiniumPlatemail=Peitoral de Dalantínio
+ItemName.YodaCloak=Manto de Yoda
+ItemName.YodaMask=Máscara de Yoda
+ItemName.YodaPants=Calças de Yoda
+ItemName.ExitiumsHead=Cabeça de Exitium
+ItemName.ExitiumsPants=Calças de Exitium
+ItemName.ExitiumsShirt=Traje de Exitium
+ItemName.HydrofluoricBoots=Botas de Fluorídrico
+ItemName.HydrofluoricHelm=Elmo de Fluorídrico
+ItemName.HydrofluoricMask=Máscara de Fluorídrico
+ItemName.HydrofluoricPlatemail=Peitoral de Fluorídrico
+ItemName.HydrofluoricVisage=Visor de Fluorídrico
+ItemName.LythenBoots=Botas de Lythen
+ItemName.LythenChestplate=Peitoral de Lythen
+ItemName.LythenHood=Capuz de Lythen
+ItemName.LythenHornedGreathelm=Grande-elmo com Chifres de Lythen
+ItemName.LythenHornedHelmet=Elmo com Chifres de Lythen
+ItemName.LythenMask=Máscara de Lythen
+ItemName.TropicalWoodBoots=Botas de Madeira Tropical
+ItemName.TropicalWoodChestplate=Peitoral de Madeira Tropical
+ItemName.TropicalWoodHelmet=Capaçete de Madeira Tropical
 
-If you're reading this, return to monke -Exitium
+If you're reading this, have a good day -Exitium
