--- a/Localization/pt-BR.lang
+++ b/Localization/pt-BR.lang
@@ -46,5 +46,10 @@ ItemName.LythenMask=Máscara de Lythen
 ItemName.TropicalWoodBoots=Botas de Madeira Tropical
 ItemName.TropicalWoodChestplate=Peitoral de Madeira Tropical
 ItemName.TropicalWoodHelmet=Capaçete de Madeira Tropical
+ItemName.Coconuthat=Chapéu de Coco
+ItemName.FlowerJellyHat=Chapéu Florido de Água-Viva
+ItemName.RedCape=Capa Vermelha
+ItemName.FishingPoleOfTheSevenSeas=Vara de Pescar dos Sete Mares
+ItemName.SailorsPole=Vara de Pescar do Marinheiro
 
 If you're reading this, have a good day -Exitium
