Materials translation my sanity

--- a/Localization/pt-BR.lang
+++ b/Localization/pt-BR.lang
@@ -51,5 +51,10 @@ ItemName.FlowerJellyHat=Chapéu Florido de Água-Viva
 ItemName.RedCape=Capa Vermelha
 ItemName.FishingPoleOfTheSevenSeas=Vara de Pescar dos Sete Mares
 ItemName.SailorsPole=Vara de Pescar do Marinheiro
+ItemName.BrokenDuelistsBlade=Lâmina do Duelista Quebrada
+ItemName.HydrosScales=Escamas do Hydros
+ItemName.Kelp=Alga
+ItemName.Pearl=Pérola
+ItemName.TropicalWood=Madeira Tropical
 
 If you're reading this, have a good day -Exitium
