--- a/Localization/pt-BR.lang
+++ b/Localization/pt-BR.lang
@@ -58,4 +58,4 @@ ItemName.Pearl=Pérola
 ItemName.TropicalWood=Madeira Tropical
 
 If you're reading this, have a good day -Exitium
-i had a bad day :)
+thanks :D - Crown
